                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 07-03-2005 updated: German language file
  - 07-03-2005 updated: Norwegian language file (Thnx to vnm)
  - 07-03-2005 updated: Chinese (Traditional) language file (Thnx to woozc)
  - 07-03-2005 updated: Korean language file (Thnx to akoako)
  - 07-03-2005 updated: Finnish language file (Thnx to jutski)
  - 07-03-2004 updated: Polish language file (Thnx to napek)
  - 06-03-2005 added: Voice support for Karaoke mode (SF Patch #1114097) - thanks stcogolin!
  - 06-03-2005 fixed: Music thumbs previously scanned on smb shares were not shown in music overlay or filelists in Music->Files view.
  - 06-03-2005 changed: keymap.xml updated to allow skip and ffw/rew when in vis.
  - 06-03-2005 fixed: my music Nav window: play action works again, and artists list now sorts excluding "the"
  - 06-03-2005 added: New built-in command XBMC.PlayMedia(filename). For instance to map a radiostation to a key in keymap.xml
  - 06-03-2005 fixed: HttpApi crash if webserver not enabled
  - 06-03-2005 added: HttpApi patch as described here http://www.xboxmediaplayer.de/cgi-bin/forums/ikonboard.pl?s=227ea528324363fb8af20c24d5ff3ddd;act=ST;f=5;t=9397
  - 05-03-2005 added: thumbAlign tag for thumbnailpanel controls, only supports center so far which centers the thumbs on the texture <thumbAlign>center</thumbAlign>. thumbPosX/thumbPosY will bump it out of center.
  - 05-03-2005 added: ActivateWindow() function now accepts a path parameter or bookmark name for bookmark jumping. Valid windows ID's for this are 1,2,3,6,501.  Example: ActivateWindow(6,F:\Videos) or ActivateWindow(501,Music Server). Valid windows ID's for this are 1,2,3,6,501